# opengl-skeleton-2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
shaders/: line.frag.hlsl  line.vert.hlsl
src/: app.cpp  app.h  common.h  idrawable.h  line.cpp  line.h  main.cpp  main_emscripten.cpp  path.h.in  randomf.h  renderer.cpp  renderer.h  shader.cpp  shader.h  triangle.h  util.h
